# keyboard-it

./: .gitignore  Cargo.toml  LICENSE  M0-HANDOFF-TR.md  M1-HANDOFF-TR.md  MAC-KURULUM-TR.md  README.md  WINDOWS-KURULUM-GIT-TR.md  WINDOWS-OTOBASLATMA-TR.md
.github/workflows/: build.yml  pages.yml
.wrangler/cache/: pages.json  wrangler-account.json
crates/mac-sender/: Cargo.toml
crates/mac-sender/assets/: keyboard-it.icns
crates/mac-sender/src/: autostart.rs  capture.rs  keymap.rs  main.rs  menubar.rs  net.rs  settings.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: config.rs  lib.rs  secure.rs
crates/win-receiver/: Cargo.toml  build.rs
crates/win-receiver/src/: autostart.rs  gui.rs  inject.rs  main.rs  netinfo.rs  scancode.rs  serve.rs  tray.rs
crates/win-receiver/ui/: keyboard-it.slint
crates/win-receiver/wix/: main.wxs
packaging/mac/: dmg-background.tiff  dmg-settings.py  make_dmg_background.py  make_icon.py  package.sh
site/: README.md  index.html  install-macos.sh
site/downloads/: .gitkeep
windows/: start-hidden.vbs
