[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/mac-sender",
    "crates/win-receiver",
]

# Single source of version truth: all three crates inherit it (version.workspace = true),
# so the dmg (mac) and msi (win) versions can never drift apart.
[workspace.package]
version = "0.1.0"

# Small single-file release exe for distribution (goes into the .msi).
# Note: opt-level/lto affect the whole workspace (mac-sender included). panic="abort"
# is deliberately NOT set: unwind behavior differs across platforms.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
