[package]
name = "mac-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }

# core-graphics/core-foundation/objc2 YALNIZCA macOS hedefinde çözülür/derlenir.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSNotification", "NSThread", "NSTimer", "NSDate"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSMenu",
    "NSMenuItem",
    "NSView",
    "objc2-core-foundation",
] }
