[package]
name = "mac-sender"
version.workspace = true
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
socket2 = "0.5"   # TCP keepalive — half-open connection detection (net.rs, parity with win-receiver)
mdns-sd = "0.20"  # browse for the receiver on the LAN — replaces hand-typing the peer IP

# core-graphics/core-foundation/objc2 resolve/compile only on macOS targets.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSNotification", "NSThread", "NSTimer", "NSDate"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSControl",
    "NSMenu",
    "NSMenuItem",
    "NSView",
    "objc2-core-foundation",
] }
