[package]
name = "win-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }

# windows/tray-icon/tao YALNIZCA Windows hedefinde çözülür/derlenir.
# macOS'ta bu blok yok sayılır (Mac build'i bunları çekmez).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }
tray-icon = "0.24"
tao = "0.34"
