[package]
name = "win-receiver"
version = "0.1.0"
edition = "2021"
description = "keyboard-it alıcı — Mac'ten şifreli tuş/fare olaylarını Windows'a enjekte eder (tepsi + ayar penceresi)"
authors = ["KutayOz"]

[dependencies]
protocol = { path = "../protocol" }

# windows/tray-icon/tao YALNIZCA Windows hedefinde çözülür/derlenir.
# macOS'ta bu blok yok sayılır (Mac build'i bunları çekmez).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_Threading",       # CreateMutexW — tek örnek (single instance)
    "Win32_Security",               # SECURITY_ATTRIBUTES (CreateMutexW imzası)
    "Win32_UI_Shell",               # ShellExecuteW — schtasks'ı yükseltip çalıştır
    "Win32_UI_WindowsAndMessaging",
] }
slint = "1.17"

[target.'cfg(windows)'.build-dependencies]
slint-build = "1.17"
winresource = "0.1"   # exe ikonu + sürüm bilgisini göm
